--- a/app/src/components/Nav.css
+++ b/app/src/components/Nav.css
@@ -44,7 +44,7 @@
   }
   
   .navbar-right .cart-count {
-    background-color: #f44336;
+    background-color: #000000;
     color: #fff;
     border-radius: 50%;
     padding: 0.2rem 0.5rem;
@@ -53,3 +53,21 @@
     top: -0.5rem;
     right: -0.5rem;
   }
+
+.logo {
+  height: 80%;
+  object-fit: contain;
+}
+
+    .logout{
+      padding: 10px 15px;
+      background-color: #000000;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+
+ 
