--- a/app/src/Pages/Delivery_Managment/styles.css
+++ b/app/src/Pages/Delivery_Managment/styles.css
@@ -23,6 +23,11 @@
     align-items: center;
 }
 
+.navbar {
+    display: flex;
+    gap: 10px; 
+}
+
 .logo {
     width: 80px;
     margin-bottom: 10px;
