--- a/app/src/pages/Manager_dashboard/generate_rewards.css
+++ b/app/src/pages/Manager_dashboard/generate_rewards.css
@@ -2,6 +2,9 @@
   padding-top: 100px;
   padding-right: 20px;
   padding-left: 20px;
+  border-radius: 10px;
+ 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
 }
 
