--- a/app/src/pages/CRM/Manager_dashboard/generate_rewards.module.css
+++ b/app/src/pages/CRM/Manager_dashboard/generate_rewards.module.css
@@ -1,11 +1,14 @@
-.reward-page {
+.rewardPage {
   padding-top: 100px;
   padding-right: 20px;
   padding-left: 20px;
+  border-radius: 10px;
+ 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
 }
 
-.header-rewards {
+.headerRewards {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -17,7 +20,7 @@
   margin: 0;
 }
 
-.primary-button {
+.primaryButton {
   background-color: #007bff;
   color: white;
   border: none;
@@ -26,20 +29,20 @@
   border-radius: 5px;
 }
 
-.customer-table {
+.customerTable {
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 20px;
 }
 
-.customer-table th,
-.customer-table td {
+.customerTable th,
+.customerTable td {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: left;
 }
 
-.customer-table th {
+.customerTable th {
   background-color: #f2f2f2;
 }
 
@@ -55,7 +58,7 @@
   align-items: center;
 }
 
-.modal-content {
+.modalContent {
   background-color: white;
   padding: 20px;
   border-radius: 5px;
@@ -76,18 +79,18 @@
   flex-direction: column;
 }
 
-.form-item {
+.formItem {
   margin-bottom: 15px;
 }
 
-.form-item label {
+.formItem label {
   margin-bottom: 5px;
   display: block;
 }
 
-.form-item input,
-.form-item textarea,
-.form-item select {
+.formItem input,
+.formItem textarea,
+.formItem select {
   width: 100%;
   padding: 8px;
   border: 1px solid #ddd;
@@ -95,6 +98,6 @@
   box-sizing: border-box; /* Ensures padding and border are included in the element's total width and height */
 }
 
-.form-item textarea {
+.formItem textarea {
   resize: vertical; /* Allows the user to vertically resize the textarea */
 }
